<resources>
    <string name="app_name">Gadwally</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Pass</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">(000)-(000,000,00)</string>
    <string name="cancel">Cancel</string>
    <string name="st">Submit</string>
    <string name="logo">logo</string>
    <string name="login_username">Username</string>
    <string name="login_btn">Login</string>
    <string name="login_password">Password</string>
    <string name="account_letter">are you have no Account??</string>
    <string name="create_new_account">Create Account</string>
    <string name="or">OR</string>
    <string name="forget_password">do you Forget Password?</string>
    <string name="system_your_day">System your Day</string>
    <string name="title_activity_main__interface">Main_Interface</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="admin">admin</string>
    <string name="system_your_life">System your Life</string>
    <string name="mr_admin">Mr.Admin</string>
    <string name="admin000_admin_com">admin000@admin.com</string>
    <string name="my_profile">My Profile</string>
    <string name="weekly_table">Weekly Table</string>
    <string name="daily_table">Daily Table</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="save_contact">Save Contact</string>
    <string name="func_image">View Func Image</string>
    <string name="func_name">Function Title</string>
    <string name="func_desc">Function Description</string>
    <string name="title_activity_daily_table">DailyTable</string>
</resources>
