<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context="com.lamba.gadwally.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/blackbox"
        android:orientation="vertical"
        android:padding="11dp"
        app:layout_constraintBottom_toTopOf="@+id/relativelayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mydesc2">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_account_circle"
            android:hint="@string/login_username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#b6b3b3"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b6b3b3" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_open"
            android:hint="@string/login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#b6b3b3" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="315dp"
        android:layout_height="15dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/lineartext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/account_letter"
                android:textColor="#ffffff"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/textcolor"
                android:textSize="9sp" />
        </LinearLayout>

        <View
            android:layout_width="172.5dp"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="#ffffff"
            android:padding="5dp" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_toStartOf="@+id/lineartext"
            android:text="@string/or"

            android:textColor="#ffeeee"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/textcolor"
            android:textSize="10.5sp" />

        <View
            android:layout_width="105dp"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/or"
            android:background="#ffffff"
            android:padding="5dp" />
    </RelativeLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape"
        android:text="@string/login_btn"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logocircle"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mylogo" />

    <TextView
        android:id="@+id/mydesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="15sp"
        android:textColor="#151515"
        android:textStyle="bold"
        android:text="@string/system_your_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"/>

    <TextView
        android:id="@+id/mydesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="System your Life"
        android:textColor="#151515"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mydesc" />


</android.support.constraint.ConstraintLayout>
