<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/brownbox"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    tools:context="com.lamba.gadwally.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#882e2320"
                android:orientation="vertical"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/cancel_cross"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/cancel"
                    android:src="@drawable/ic_cancel" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/logocircle"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/mylogo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/blackbox"
                android:orientation="vertical"
                android:padding="6dp">

                <EditText
                    android:id="@+id/reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_account_circle"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#b6b3b3" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="#b6b3b3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/blackbox"
                android:orientation="vertical"
                android:padding="6dp">

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_open"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#b6b3b3" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="#b6b3b3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/blackbox"
                android:orientation="vertical"
                android:padding="6dp">

                <EditText
                    android:id="@+id/reg_conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_open"
                    android:hint="@string/confirm"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#b6b3b3" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="#b6b3b3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/blackbox"
                android:orientation="vertical"
                android:padding="6dp">

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/email_register"
                    android:hint="@string/e_mail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#b6b3b3" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="#b6b3b3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/blackbox"
                android:orientation="vertical"
                android:padding="6dp">

                <EditText
                    android:id="@+id/reg_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_phone"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#b6b3b3" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="#b6b3b3" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape"
                android:text="@string/st"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
